# invitation_management

./: Cargo.toml  README.md
rust/: .gitignore  Cargo.toml  LICENSE
rust/src/: connect_google_calendar.rs  main.rs  main_old.rs
rust/src/data/: invitations_historic - Copie.csv  invitations_historic.csv
rust/src/data/calendar_ics/: ASBG CA.ics  Entrainements.ics  Evenements.ics  Evenements_0e2f96bf735646d0321e4d14371a65ea40d875c49a4f73efdd50e313a8e30646@group.calendar.google.com.ics:Zone.Identifier  Fermeture Gymnase.ics  Interclubs.ics  Tournoid FFBAD.ics  Tournois FFBAD.ics  Tournois LGBT.ics  Vacances scolaires.ics  bureau.asbg@gmail.com.ics  bureau.ics
src/: main.rs
