[package]
name = "invitation_management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
# google-calendar3 = "5.0.4"
# yup-oauth2 = "5.0.4"
oauth2 = { version = "5.0.0-alpha.4" }
# reqwest = { version = "0.11", features = ["json"] }
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
rustc-serialize = "0.3"