[package]
name = "invitation_management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
polars = {version= "0.40.0" , features = ["lazy"]}
polars-core = "0.40.0"
polars-io = "0.40.0"

[dependencies.ical]
version = "0.10.0"
default-features = false
features = ["ical", "vcard"]

